VSCP-2252: Volume Replication API to fetch replication name (#1351)
