# core/core-api/core-servergen/oas_router_gen.go
@@ -106,6 +106,26 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 
 				}
 
+			case 'g': // Prefix: "getMultipleReplicationsByExternalUUID"
+
+				if l := len("getMultipleReplicationsByExternalUUID"); len(elem) >= l && elem[0:l] == "getMultipleReplicationsByExternalUUID" {
+					elem = elem[l:]
+				} else {
+					break
+				}
+
+				if len(elem) == 0 {
+					// Leaf node.
+					switch r.Method {
+					case "GET":
+						s.handleV1GetMultipleReplicationsByExternalUUIDRequest([0]string{}, elemIsEscaped, w, r)
+					default:
+						s.notAllowed(w, r, "GET")
+					}
+
+					return
+				}
+
 			case 'p': // Prefix: "pools"
 
 				if l := len("pools"); len(elem) >= l && elem[0:l] == "pools" {
@@ -330,6 +350,30 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 						}
 					}
 
+				}
+
+			case 'g': // Prefix: "getMultipleReplicationsByExternalUUID"
+
+				if l := len("getMultipleReplicationsByExternalUUID"); len(elem) >= l && elem[0:l] == "getMultipleReplicationsByExternalUUID" {
+					elem = elem[l:]
+				} else {
+					break
+				}
+
+				if len(elem) == 0 {
+					// Leaf node.
+					switch method {
+					case "GET":
+						r.name = V1GetMultipleReplicationsByExternalUUIDOperation
+						r.summary = "List replications by external UUID"
+						r.operationID = "v1_getMultipleReplicationsByExternalUUID"
+						r.pathPattern = "/v1/getMultipleReplicationsByExternalUUID"
+						r.args = args
+						r.count = 0
+						return r, true
+					default:
+						return
+					}
 				}
 
 			case 'p': // Prefix: "pools"
